--- a/qtbackend/qtbackend/qtbackend.vcxproj
+++ b/qtbackend/qtbackend/qtbackend.vcxproj
@@ -32,12 +32,12 @@
   </ImportGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="QtSettings">
     <QtInstall>Six</QtInstall>
-    <QtModules>core;sql;network;svg;multimedia;webchannel;websockets;webengine;networkauth</QtModules>
+    <QtModules>core;network;svg</QtModules>
     <QtBuildConfig>debug</QtBuildConfig>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'" Label="QtSettings">
     <QtInstall>Six</QtInstall>
-    <QtModules>core;xml;sql;network;svg;multimedia;webchannel;websockets;webengine;networkauth</QtModules>
+    <QtModules>core;network;svg</QtModules>
     <QtBuildConfig>release</QtBuildConfig>
   </PropertyGroup>
   <Target Name="QtMsBuildNotFound" BeforeTargets="CustomBuild;ClCompile" Condition="!Exists('$(QtMsBuild)\qt.targets') or !Exists('$(QtMsBuild)\qt.props')">
